[gd_scene load_steps=36 format=2]

[ext_resource path="res://old/characters/player/Player.gd" type="Script" id=1]
[ext_resource path="res://old/characters/player/states/StateMachine.gd" type="Script" id=2]
[ext_resource path="res://old/characters/player/states/Idle.gd" type="Script" id=3]
[ext_resource path="res://old/characters/player/states/Walk.gd" type="Script" id=4]
[ext_resource path="res://old/characters/player/states/Interact.gd" type="Script" id=5]
[ext_resource path="res://old/characters/player/states/Menu.gd" type="Script" id=6]
[ext_resource path="res://old/characters/player/states/Attack.gd" type="Script" id=7]
[ext_resource path="res://old/inventory/Inventory.gd" type="Script" id=8]
[ext_resource path="res://old/characters/player/CarriedItem.gd" type="Script" id=9]
[ext_resource path="res://old/characters/player/sprites/idle3.png" type="Texture" id=10]
[ext_resource path="res://old/characters/player/sprites/walkright0.png" type="Texture" id=11]
[ext_resource path="res://old/characters/player/sprites/walkright1.png" type="Texture" id=12]
[ext_resource path="res://old/characters/player/sprites/walkright2.png" type="Texture" id=13]
[ext_resource path="res://old/characters/player/sprites/walkright3.png" type="Texture" id=14]
[ext_resource path="res://old/characters/player/sprites/walkleft0.png" type="Texture" id=15]
[ext_resource path="res://old/characters/player/sprites/walkleft1.png" type="Texture" id=16]
[ext_resource path="res://old/characters/player/sprites/walkleft2.png" type="Texture" id=17]
[ext_resource path="res://old/characters/player/sprites/walkleft3.png" type="Texture" id=18]
[ext_resource path="res://old/characters/player/sprites/idle1.png" type="Texture" id=19]
[ext_resource path="res://old/characters/player/sprites/idle0.png" type="Texture" id=20]
[ext_resource path="res://old/characters/player/sprites/walkdown0.png" type="Texture" id=21]
[ext_resource path="res://old/characters/player/sprites/walkdown1.png" type="Texture" id=22]
[ext_resource path="res://old/characters/player/sprites/walkdown2.png" type="Texture" id=23]
[ext_resource path="res://old/characters/player/sprites/walkdown3.png" type="Texture" id=24]
[ext_resource path="res://old/characters/player/sprites/walkup0.png" type="Texture" id=25]
[ext_resource path="res://old/characters/player/sprites/walkup1.png" type="Texture" id=26]
[ext_resource path="res://old/characters/player/sprites/walkup2.png" type="Texture" id=27]
[ext_resource path="res://old/characters/player/sprites/walkup3.png" type="Texture" id=28]
[ext_resource path="res://old/characters/player/sprites/idle2.png" type="Texture" id=29]
[ext_resource path="res://old/characters/player/sprites/point_light.png" type="Texture" id=30]
[ext_resource path="res://old/shader-tests/palette.tres" type="Material" id=31]



[sub_resource type="CircleShape2D" id=1]
radius = 8.63928

[sub_resource type="CircleShape2D" id=2]
radius = 49.8919

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "walkright",
"speed": 8.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "walkleft",
"speed": 8.0
}, {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "idleleft",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ) ],
"loop": true,
"name": "idledown",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ) ],
"loop": true,
"name": "walkdown",
"speed": 8.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ) ],
"loop": true,
"name": "walkup",
"speed": 8.0
}, {
"frames": [ ExtResource( 29 ) ],
"loop": true,
"name": "idleup",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "idleright",
"speed": 5.0
} ]

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, -10, 10, 5, 5, 8, 0, 9, -5, 8, -10, 5 )

[node name="Player" type="KinematicBody2D"]
light_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
shape = SubResource( 1 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 2 )
ACTOR = NodePath("..")
START_STATE = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Grabbing" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Menu" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource( 7 )
attack_cooldown = 0.5

[node name="Inventory" type="Node" parent="."]
script = ExtResource( 8 )

[node name="CarriedItem" type="Sprite" parent="."]
visible = false
light_mask = 1024
position = Vector2( 12, 10 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 9 )

[node name="DialogTrigger" type="Area2D" parent="."]
visible = false
position = Vector2( 0, -4 )

[node name="DialogTriggerRadius" type="CollisionShape2D" parent="DialogTrigger"]
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
light_mask = 1024
material = ExtResource( 31 )
position = Vector2( 0, -16 )
frames = SubResource( 3 )
animation = "idleleft"

[node name="AttackAreas" type="Node2D" parent="."]
visible = false

[node name="LeftAttackArea" type="Area2D" parent="AttackAreas"]
position = Vector2( 0, 4 )
scale = Vector2( 1.5, 1.5 )

[node name="LeftAttackArea" type="CollisionShape2D" parent="AttackAreas/LeftAttackArea"]
position = Vector2( -5, -5 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="UpAttackArea" type="Area2D" parent="AttackAreas"]
position = Vector2( 0, 4 )
scale = Vector2( 1.5, 1.5 )

[node name="UpAttackArea" type="CollisionShape2D" parent="AttackAreas/UpAttackArea"]
position = Vector2( 0, -10 )
rotation = 3.14159
shape = SubResource( 4 )

[node name="RightAttackArea" type="Area2D" parent="AttackAreas"]
position = Vector2( 0, 4 )
scale = Vector2( 1.5, 1.5 )

[node name="RightAttackArea" type="CollisionShape2D" parent="AttackAreas/RightAttackArea"]
position = Vector2( 5, -5 )
rotation = 4.71239
shape = SubResource( 4 )

[node name="DownAttackArea" type="Area2D" parent="AttackAreas"]
position = Vector2( 0, 4 )
scale = Vector2( 1.5, 1.5 )

[node name="DownAttackArea" type="CollisionShape2D" parent="AttackAreas/DownAttackArea"]
shape = SubResource( 4 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 30 )
texture_scale = 2.0
color = Color( 1, 1, 1, 0.490196 )
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 1 )
shadow_filter = 1
shadow_filter_smooth = 6.2
[connection signal="area_entered" from="DialogTrigger" to="." method="_on_DialogTrigger_area_entered"]
[connection signal="area_exited" from="DialogTrigger" to="." method="_on_DialogTrigger_area_exited"]
